# contribution-complexity

./: .gitignore  CITATION.bib  README.md  Vagrantfile  pyproject.toml
artwork/: logo.graffle
contribution_complexity/: __init__.py  complexity_types.py  compute.py  default_models.py  metrics.py  train_model.py
data/: cas_evaluation_tab.md  gaf_evaluation_tab.md  gaffer_contrib_compl.csv
experiment/: analyzis.py  compute_contrib_compls.py  evaluation.py  gh_issues_to_csv.py  jira_to_csv.py  run_experiment.sh
tests/: test_contribution_complexity.py
